about section end

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -226,7 +226,7 @@
           "compass": false,
           "fullCompass": false,
           "outputStyle": "expanded",
-          "customOutput": false,
+          "customOutput": true,
           "imported": false,
           "parents": [],
           "type": "sass"
@@ -659,6 +659,43 @@
           "path": "assets/html/index.html",
           "output": "assets/html/index.html",
           "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "19eaed41": {
+          "id": "19eaed41",
+          "path": "img/our story.png",
+          "output": "img/our story.png",
+          "name": "our story.png",
+          "category": "IMAGE",
+          "size": 1008,
+          "type": "png",
+          "initialSize": 1008,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "98814b75": {
+          "id": "98814b75",
+          "path": "img/about/5.png",
+          "output": "img/about/5.png",
+          "name": "5.png",
+          "category": "IMAGE",
+          "size": 3669,
+          "type": "png",
+          "initialSize": 3669,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e6981244": {
+          "id": "e6981244",
+          "path": "save.html",
+          "output": "save.html",
+          "name": "save.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
